--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     <div class="nav-container container">
       <a href="#"><h2>HONDA</h2></a>
       <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#" class="active">Contact Us</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Services</a></li>
+        <li><a href="#contact" class="active">Contact Us</a></li>
       </ul>
     </div>
   </nav>
 
   <!-- header section -->
+  <section class="home" id="home">
   <div class="header">
     <div class="container">
       <div>
@@ -35,6 +36,8 @@
       <img src="images/hsmart.png" alt="">
     </div>
   </div>
+    <section class="about" id="about">
+    
   <!-- overlay section -->
   <img src=images/smartfind.png width="700" alt="" class="smartfind">
   <img src=images/smartstart.png width="700"  alt="" class="smartstart">
@@ -42,6 +45,10 @@
   
 
   <!-- Footer section -->
+
+
+
+<section class="contact" id="contact">
   <footer class="footer">
     <div class="main-container">
       <div>
